added requesting camera permission

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="pl.baftek.hackheroes_2019">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+
     <meta-data
         android:name="com.google.firebase.ml.vision.DEPENDENCIES"
         android:value="label" />
