--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,16 +31,28 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.core:core-ktx:1.1.0"
+
+    // Lifecycle
+    implementation("androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05")
+    implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05")
+    implementation("androidx.lifecycle:lifecycle-livedata-core-ktx:2.2.0-alpha05")
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05")
+
+    // Camera
+    implementation "androidx.camera:camera-core:1.0.0-alpha05"
+    implementation "androidx.camera:camera-camera2:1.0.0-alpha05"
+
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
 
+    // Google
     implementation "com.google.firebase:firebase-analytics:17.2.0"
     implementation "com.google.firebase:firebase-ml-vision:23.0.0"
     implementation "com.google.firebase:firebase-ml-vision-image-label-model:18.0.0"
 
-    implementation "androidx.camera:camera-core:1.0.0-alpha05"
-    implementation "androidx.camera:camera-camera2:1.0.0-alpha05"
+
 }
 
 apply plugin: "com.google.gms.google-services"
