--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,6 +41,10 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-livedata-core-ktx:2.2.0-alpha05")
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05")
 
+    // Coroutines support
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.2'
+
     // Camera
     implementation "androidx.camera:camera-core:1.0.0-alpha05"
     implementation "androidx.camera:camera-camera2:1.0.0-alpha05"
