--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,6 +20,10 @@ android {
         targetCompatibility JavaVersion.VERSION_1_8
     }
 
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
+
     buildTypes {
         release {
             minifyEnabled false
@@ -36,6 +40,7 @@ dependencies {
     implementation "androidx.core:core-ktx:1.1.0"
 
     // Lifecycle
+    implementation('androidx.fragment:fragment-ktx:1.2.0-alpha04')
     implementation("androidx.lifecycle:lifecycle-extensions:2.2.0-alpha05")
     implementation("androidx.lifecycle:lifecycle-livedata-ktx:2.2.0-alpha05")
     implementation("androidx.lifecycle:lifecycle-livedata-core-ktx:2.2.0-alpha05")
