--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,6 +59,7 @@ dependencies {
     // Google
     implementation "com.google.firebase:firebase-analytics:17.2.0"
     implementation "com.google.firebase:firebase-ml-vision:23.0.0"
+    implementation 'com.google.firebase:firebase-ml-vision-automl:18.0.1'
     implementation "com.google.firebase:firebase-ml-vision-image-label-model:18.0.0"
 
 
