--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
 
     // Camera
     implementation "androidx.camera:camera-core:1.0.0-alpha05"
+    implementation "androidx.camera:camera-view:1.0.0-alpha02"
     implementation "androidx.camera:camera-camera2:1.0.0-alpha05"
 
     implementation "androidx.constraintlayout:constraintlayout:1.1.3"
