--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 
+    // ** AndroidX **
+
+    // Core
     implementation "androidx.appcompat:appcompat:1.1.0"
     implementation "androidx.core:core-ktx:1.1.0"
 
@@ -50,22 +53,28 @@ dependencies {
     implementation("androidx.lifecycle:lifecycle-livedata-core-ktx:2.2.0-alpha05")
     implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0-alpha05")
 
+    // Camera
+    implementation "androidx.camera:camera-core:1.0.0-alpha06"
+    implementation "androidx.camera:camera-view:1.0.0-alpha03"
+    implementation "androidx.camera:camera-camera2:1.0.0-alpha06"
+
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+
+    // ** end AndroidX **
+
     // Coroutines support
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-play-services:1.3.2'
 
-    // Camera
-    implementation "androidx.camera:camera-core:1.0.0-alpha05"
-    implementation "androidx.camera:camera-view:1.0.0-alpha02"
-    implementation "androidx.camera:camera-camera2:1.0.0-alpha05"
-
-    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
-
-    // Google
+    // Firebase
     implementation "com.google.firebase:firebase-analytics:17.2.0"
     implementation "com.google.firebase:firebase-ml-vision:23.0.0"
     implementation 'com.google.firebase:firebase-ml-vision-automl:18.0.1'
     implementation "com.google.firebase:firebase-ml-vision-image-label-model:18.0.0"
+
+    // Glide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
 
 
 }
